--- a/style.css
+++ b/style.css
@@ -45,10 +45,11 @@ body {
 /* campos de texto */
 .campo-texto {
     border-radius: 50px;
-    padding: 5px;
+    border:1px solid #000;
+    padding: 10px;
     padding-right: 160px;
     position: relative;
-    bottom: -5px;  
+    bottom: -5px; 
 }
 
 .digite {
